--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,13 @@
   body {
     @apply bg-lightGray text-dark antialiased;
   }
-  h1, h2, h3, h4, h5, h6 {
+
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @apply tracking-tight font-bold text-dark;
   }
 }
@@ -15,13 +21,34 @@
 ::-webkit-scrollbar {
   width: 8px;
 }
+
 ::-webkit-scrollbar-track {
   background: #F3F3F3;
 }
+
 ::-webkit-scrollbar-thumb {
   background: #0C0C0C;
   border-radius: 4px;
 }
+
 ::-webkit-scrollbar-thumb:hover {
   background: #333333;
+}
+
+@layer utilities {
+  @keyframes slide-in {
+    from {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+
+    to {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  .animate-slide-in {
+    animation: slide-in 0.6s ease-out;
+  }
 }
